[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-rover-runner"
version = "0.1.13"
description = "Cross-platform GitHub/Bitbucket repository automation toolkit"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Repo Rover Runner Maintainers" }
]
keywords = ["git", "github", "bitbucket", "automation", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "mcp>=1.0.0",
  "pyfiglet>=1.0.4",
  "rich>=15.0.0",
]

[project.optional-dependencies]
dev = [
  "coverage>=7.6.0",
  "pip-audit>=2.7.3",
  "bandit>=1.7.9",
  "gitleaks",
  "sec-report-kit",
]

[project.scripts]
repo-rover-runner-client = "repo_rover_runner_client:main"
repo-rover-runner = "repo_rover_runner_client:main"
rrr = "repo_rover_runner_client:main"
repo-rover-runner-mcp = "repo_rover_runner_mcp_server:main"

[tool.setuptools]
py-modules = ["repo_rover_runner_client", "repo_rover_runner_cli", "repo_rover_runner_mcp_server"]

[tool.setuptools.packages.find]
include = ["repo_rover_runner*"]
exclude = ["tests*", "tmp*"]
